export class Author {
  constructor(
      public id: number,
      public fullName: string
    ) {}
}
