export class GenreDto {
    constructor(
        public id: number,
        public name: string
      ) {}
}

